[package]
name = "letsdeb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xz = "0.1"
ar = "0.9"
flate2 = "1.0"
zstd = "0.13"
debcontrol_struct = "0.3"
oma-debcontrol = "0.3"
thiserror = "1.0"
tar = "0.4"
