[package]
name = "letsdeb-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xz = "0.1"
ar = "0.9"
flate2 = "1.0"
zstd = "0.13"
debcontrol = { version = "0.3", package = "oma-debcontrol" }
debcontrol_struct = { version = "0.3", package = "debcontrol-struct-with-oma-decontrol" }
thiserror = "1.0"
tar = "0.4"
walkdir = "2.4"
